[package]
name = "liberte-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "liberte_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
spl-token = { version = "3.2.0", features = ["no-entrypoint"], optional = true }
spl-associated-token-account = {version = "1.0.5", features = ["no-entrypoint"]}
mpl-token-metadata = { version = "1.4.0", features = ["no-entrypoint"] }
solana-address-lookup-table-program ="=1.14.1"